# fitpromixai

./: README.md  _INSTALL_ME.bat  package-lock.json  package.json  requirements.txt  test_hf.py
backend/fit-ai-backend-main/: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_backend.ps1
backend/fit-ai-backend-main/server/: app.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/cron/check-trials/: route.ts
src/app/api/razorpay/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/community/: page.tsx
src/app/dashboard/diet/: page.tsx
src/app/dashboard/premium/: page.tsx
src/app/dashboard/settings/: page.tsx
src/app/dashboard/workouts/: page.tsx
src/components/: AntigravityLogin.tsx  CanvasPlayer.tsx  CommunityFeed.tsx  HeroSequence.tsx  KineticAssayReport.tsx  LogWorkoutButton.tsx  LoginPortal.tsx  PricingSection.tsx
src/components/dashboard/: Charts.tsx  DietModule.tsx  MetricCard.tsx  NeuralOnboarding.tsx  Sidebar.tsx  TerminalInput.tsx  WorkoutModule.tsx
src/context/: AuthContext.tsx  AvatarContext.tsx
src/lib/: firebase.ts
